# KR5

./: .gitignore  README.md  config.py  pyproject.toml
src/: DBManager.py  config_bd_read.py  hhApi.py  main.py  utils.py
