[tool.poetry]
name = "kr5"
version = "0.1.0"
description = ""
authors = ["Tatyana Khorobrykh <pushistik607@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "^8.2.2"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

